tests/it/snapshots/it__completion__latex__citation.snap
---
source: tests/it/completion.rs
assertion_line: 237
expression: "complete_and_resolve(&server, tex_uri, 3, 6)?"
---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "bar:2005",
      "kind": 1,
      "preselect": false,
      "sortText": "00 bar:2005 @articlebar:2005",
      "filterText": "bar:2005 @articlebar:2005",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 6
          },
          "end": {
            "line": 3,
            "character": 6
          }
        },
        "newText": "bar:2005"
      }
    },
    {
      "label": "foo:2019",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "F. Bar: \"Baz Qux\". (2019)."
      },
      "preselect": false,
      "sortText": "01 foo:2019 @articlefoo:2019 author Foo Bar title Baz Qux year 2019",
      "filterText": "foo:2019 @articlefoo:2019 author Foo Bar title Baz Qux year 2019",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 6
          },
          "end": {
            "line": 3,
            "character": 6
          }
        },
        "newText": "foo:2019"
      }
    }
  ]
}
