tests/it/snapshots/it__completion__latex__citation_after.snap
---
source: tests/it/completion.rs
assertion_line: 305
expression: "complete_and_resolve(&server, tex_uri, 3, 7)?"
---
{
  "isIncomplete": false,
  "items": []
}
