tests/it/snapshots/it__completion__latex__citation_multi_word.snap
---
source: tests/it/completion.rs
assertion_line: 271
expression: "complete_and_resolve(&server, tex_uri, 3, 7)?"
---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "foo",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "F. Bar: *Baz Qux*. (2019)."
      },
      "preselect": false,
      "sortText": "00 foo @articlefoo author Foo Bar title Baz Qux year 2019",
      "filterText": "foo @articlefoo author Foo Bar title Baz Qux year 2019",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 6
          },
          "end": {
            "line": 3,
            "character": 11
          }
        },
        "newText": "foo"
      }
    }
  ]
}
