tests/it/snapshots/it__completion__latex__citation_open_brace.snap
---
source: tests/it/completion.rs
assertion_line: 337
expression: "complete_and_resolve(&server, tex_uri, 3, 9)?"
---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "FooBar",
      "kind": 1,
      "documentation": {
        "kind": "markdown",
        "value": "F. Bar: *Baz Qux*. (2019)."
      },
      "preselect": false,
      "sortText": "00 FooBar @articleFooBar author Foo Bar title Baz Qux year 2019",
      "filterText": "FooBar @articleFooBar author Foo Bar title Baz Qux year 2019",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 6
          },
          "end": {
            "line": 3,
            "character": 9
          }
        },
        "newText": "FooBar"
      }
    }
  ]
}
