tests/it/snapshots/it__completion__latex__class_import.snap
---
source: tests/it/completion.rs
assertion_line: 569
expression: "complete_and_resolve(&server, uri, 0, 19)?"
---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "book",
      "kind": 1,
      "documentation": {
        "kind": "plaintext",
        "value": "LaTeX is a widely-used macro package for TeX, providing many basic document formating commands extended by a wide range of packages. It is a development of Leslie Lamport's LaTeX 2.09, and superseded the older system in June 1994. The basic distribution is catalogued separately, at latex-base; apart from a large set of contributed packages and third-party documentation (elsewhere on the archive), the distribution includes: - a bunch of required packages, which LaTeX authors are \"entitled to assume\" will be present on any system running LaTeX; and - a minimal set of documentation detailing differences from the 'old' version of LaTeX in the areas of user commands, font selection and control, class and package writing, font encodings, configuration options and modification of LaTeX. For downloading details, see the linked catalogue entries above."
      },
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 15
          },
          "end": {
            "line": 0,
            "character": 19
          }
        },
        "newText": "book"
      }
    },
    {
      "label": "bookcover",
      "kind": 1,
      "documentation": {
        "kind": "plaintext",
        "value": "This class helps typesetting book covers and dust jackets."
      },
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 15
          },
          "end": {
            "line": 0,
            "character": 19
          }
        },
        "newText": "bookcover"
      }
    },
    {
      "label": "bookest",
      "kind": 1,
      "documentation": {
        "kind": "plaintext",
        "value": "The class extends the standard book class, in the areas of colour scheme management, document layout, headings and footers, front page layout, and other minor items."
      },
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 15
          },
          "end": {
            "line": 0,
            "character": 19
          }
        },
        "newText": "bookest"
      }
    },
    {
      "label": "bbook",
      "kind": 1,
      "documentation": {
        "kind": "plaintext",
        "value": "The bundle provides class files for writing Bangla and Assamese with LaTeX, and Metafont sources for fonts."
      },
      "preselect": false,
      "sortText": "03",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 15
          },
          "end": {
            "line": 0,
            "character": 19
          }
        },
        "newText": "bbook"
      }
    },
    {
      "label": "basque-book",
      "kind": 1,
      "documentation": {
        "kind": "plaintext",
        "value": "The class is derived from the LaTeX book class. The extensions solve grammatical and numeration issues that occur when book-type documents are written in Basque. The class is useful for writing books, PhD and Master Theses, etc., in Basque."
      },
      "preselect": false,
      "sortText": "04",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 15
          },
          "end": {
            "line": 0,
            "character": 19
          }
        },
        "newText": "basque-book"
      }
    },
    {
      "label": "biditufte-book",
      "kind": 1,
      "documentation": {
        "kind": "plaintext",
        "value": "A convenient interface for typesetting bidirectional texts with plain TeX and LaTeX. The package includes adaptations for use with many other commonly-used packages."
      },
      "preselect": false,
      "sortText": "05",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 15
          },
          "end": {
            "line": 0,
            "character": 19
          }
        },
        "newText": "biditufte-book"
      }
    },
    {
      "label": "caesar_book",
      "kind": 1,
      "documentation": {
        "kind": "plaintext",
        "value": "The package allows typesetting of texts with notes, figures, citations, captions and tables in the margin. This is common (for example) in science text books."
      },
      "preselect": false,
      "sortText": "06",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 15
          },
          "end": {
            "line": 0,
            "character": 19
          }
        },
        "newText": "caesar_book"
      }
    }
  ]
}
