tests/it/snapshots/it__completion__latex__color_name.snap
---
source: tests/it/completion.rs
assertion_line: 355
expression: "complete_and_resolve(&server, uri, 0, 9)?"
---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "red",
      "kind": 1,
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 7
          },
          "end": {
            "line": 0,
            "character": 9
          }
        },
        "newText": "red"
      }
    },
    {
      "label": "Red",
      "kind": 1,
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 7
          },
          "end": {
            "line": 0,
            "character": 9
          }
        },
        "newText": "Red"
      }
    },
    {
      "label": "RedOrange",
      "kind": 1,
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 7
          },
          "end": {
            "line": 0,
            "character": 9
          }
        },
        "newText": "RedOrange"
      }
    },
    {
      "label": "RedViolet",
      "kind": 1,
      "preselect": false,
      "sortText": "03",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 7
          },
          "end": {
            "line": 0,
            "character": 9
          }
        },
        "newText": "RedViolet"
      }
    },
    {
      "label": "BrickRed",
      "kind": 1,
      "preselect": false,
      "sortText": "04",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 7
          },
          "end": {
            "line": 0,
            "character": 9
          }
        },
        "newText": "BrickRed"
      }
    },
    {
      "label": "OrangeRed",
      "kind": 1,
      "preselect": false,
      "sortText": "05",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 7
          },
          "end": {
            "line": 0,
            "character": 9
          }
        },
        "newText": "OrangeRed"
      }
    },
    {
      "label": "RubineRed",
      "kind": 1,
      "preselect": false,
      "sortText": "06",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 7
          },
          "end": {
            "line": 0,
            "character": 9
          }
        },
        "newText": "RubineRed"
      }
    }
  ]
}
