tests/it/snapshots/it__completion__latex__empty_document.snap
---
source: tests/it/completion.rs
assertion_line: 194
expression: "complete_and_resolve(&server, uri, 0, 0)?"
---
{
  "isIncomplete": false,
  "items": []
}
